# eigsep_cal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
gain_calibration/.ipynb_checkpoints/: Impedance-checkpoint.ipynb
gain_calibration/data/field_oct24/: fem348_fiberEF_pam377.npz
gain_calibration/notebooks/: signal_chain.ipynb
src/eigsep_cal/: __init__.py  gain_cal.py
vivaldi_cal/gain_calibration/: gain_cal.py
vivaldi_cal/gain_calibration/data/field_oct24/: ants_load.npz  fem032_fiberAB_pam376.npz  fem320_fiberCD_pam375.npz
vivaldi_cal/gain_calibration/data/oct24/pam/: pam378_fiber5_fem32.npz
vivaldi_cal/gain_calibration/notebooks/: signal_chain.ipynb
