[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eigsep_cal"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Christian Hellum Bye", email = "chbye@berkeley.edu"},
]
description = "EIGSEP calibration"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/EIGSEP/eigsep_cal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "eigsep_cal.__version__"}

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py: F401",
]
