[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigsep_cal"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    {name = "Christian Hellum Bye", email = "chbye@berkeley.edu"},
]
description = "EIGSEP calibration"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "eigsep_corr",
    "numpy",
]

[project.urls]
Repository = "https://github.com/EIGSEP/eigsep_cal"

[tool.hatch.build.targets.wheel]
packages = ["src/eigsep_cal"]

[tool.ruff]
line-length = 79
src = ["src"]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
